--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         }
 
         async function getEmails(user_email) {
+            console.log("user_email:",user_email);
             let gmailData = [];
             let obj = {
                 userId: "me",
