--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             if (isSignedIn) {
                 let response = await gapi.auth.getToken();
                 if(window.opener) window.opener.postMessage(response, '*');
-                else await getEmails();
+//                 else await getEmails();
                 window.close();
             }
         }
