--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
                 userId: "me",
             };
             let mails = await gapi.client.gmail.users.messages.list(obj);
-            for (var item of mails.result.messages) {
-                mailObj.id = item.id;
-                let data = await gapi.client.gmail.users.messages.get(mailObj);
-                let mail = this.filterMails(data.result);
-                gmailData.push(mail);
+            if(mails.result.resultSizeEstimate > 0) {
+                for (var item of mails.result.messages) {
+                    mailObj.id = item.id;
+                    let data = await gapi.client.gmail.users.messages.get(mailObj);
+                    let mail = this.filterMails(data.result);
+                    gmailData.push(mail);
+                }
             }
             window.top.postMessage({type: 'gmail', response: gmailData}, "*")
         }
